third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/string/bad-hex-esc-4.stderr
TOML parse error at line 1, column 20
  |
1 | bad-hex-esc-4 = "\x 50"
  |                    ^
invalid escape sequence
expected `b`, `f`, `n`, `r`, `t`, `u`, `U`, `\`, `"`
